--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="drawer_text">Navigation Drawer example.</string>
     
-    <string name="ns_menu_main_header">Title</string>
+    <string name="ns_menu_main_header">Feeds</string>
     <string name="ns_menu_main_header2">Title 2</string>
     
     <string name="ns_menu_open">Ajouter des flux</string>
