--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_save">Save</string>
     <string name="hello_world">Hello world!</string>
-    <string name="drawer_text">Votre flux d'activités</string>
+    <string name="drawer_text">Votre flux</string>
     
     <string name="ns_menu_main_header">Feeds</string>
     <string name="ns_menu_main_header2">Title 2</string>
